# stingle-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bump-version.sh  dev.cmd  dev.ps1
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  api.ts  main.tsx  styles.css
app/src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  installer-hooks.nsh  stingle-updater.key.pub  tauri.bundle-ffmpeg.conf.json  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: README.md
app/src-tauri/src/: clipboard_files.rs  config.rs  lib.rs  media_server.rs  secure_store.rs  tray.rs  updater.rs  watch.rs
crates/stingle-api/: Cargo.toml
crates/stingle-api/examples/: live_e2e.rs
crates/stingle-api/src/: client.rs  de.rs  endpoints.rs  error.rs  lib.rs  models.rs  response.rs
crates/stingle-api/tests/: parse.rs
crates/stingle-core/: Cargo.toml
crates/stingle-core/examples/: diagnose_album.rs  heic_decode.rs  live_core_e2e.rs  live_share_recover.rs  verify_album.rs  verify_move.rs  verify_prefetch.rs  verify_real.rs
crates/stingle-core/src/: account.rs  albums.rs  cache.rs  error.rs  fileops.rs  heif.rs  import.rs  lib.rs  media.rs  media_cache.rs  paths.rs  prefetch.rs  sharing.rs  sync.rs  takeout.rs  thumb_cache.rs  thumbnail.rs  util.rs
crates/stingle-crypto/: Cargo.toml
crates/stingle-crypto/src/: album.rs  constants.rs  error.rs  file.rs  keys.rs  lib.rs  mnemonic.rs  pwhash.rs  sodium.rs
crates/stingle-crypto/tests/: roundtrip.rs  vectors.rs
crates/stingle-db/: Cargo.toml
crates/stingle-db/src/: error.rs  lib.rs  models.rs  queries.rs  schema.rs
crates/stingle-db/tests/: db.rs
crates/stingle-vfs/: Cargo.toml  build.rs
crates/stingle-vfs/examples/: roundtrip.rs
crates/stingle-vfs/src/: fuse.rs  lib.rs  ops.rs  tree.rs  winfsp.rs
docs/: CRYPTO_SPEC.md  ROADMAP.md
