[package]
name = "app"
version = "0.1.8"
description = "Stingle Desktop"
authors = ["Stingle Desktop contributors"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-drag = "2"
tauri-plugin-updater = "2"

stingle-core = { path = "../../crates/stingle-core" }
stingle-crypto = { path = "../../crates/stingle-crypto" }
stingle-vfs = { path = "../../crates/stingle-vfs" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"

# Auto-unlock secure key storage (see src/secure_store.rs for the tiers).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Foundation",
    "Security_Credentials",
    "Security_Credentials_UI",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# OSX_10_15 enables PasswordOptions::use_protected_keychain (the data-
# protection keychain), required for the Touch ID-gated auto-unlock item.
security-framework = { version = "3", features = ["OSX_10_15"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Auto-unlock key in the freedesktop Secret Service (GNOME Keyring / KWallet).
# Pure-Rust zbus transport — no system libdbus needed at build or run time.
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }

[features]
# Build the Windows WinFsp virtual-drive adapter into the app. OFF by default so
# ordinary dev/CI builds need neither WinFsp nor libclang; the vfs_* commands
# still exist but report "unsupported". Enable for Windows release builds:
#   cargo build -p app --features vfs-winfsp
# (requires WinFsp + developer files and libclang — see the project memory).
vfs-winfsp = ["stingle-vfs/mount-winfsp"]
# Build the Unix FUSE virtual-drive adapter (Linux + macOS). Enable for
# Linux/macOS builds: `npm run tauri dev -- --features vfs-fuse`. Needs libfuse
# dev files to build and the FUSE runtime (fuse3 / macFUSE) to run.
vfs-fuse = ["stingle-vfs/mount-fuse"]
