[package]
name = "stingle-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Byte-compatible re-implementation of the Stingle Photos cryptography (libsodium-based)."

[dependencies]
libsodium-sys-stable.workspace = true
zeroize.workspace = true
thiserror.workspace = true
base64.workspace = true
hex.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
