[package]
name = "stingle-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Local SQLite store mirroring the Stingle Photos Android schema."

[dependencies]
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
